--- a/css/styles.css
+++ b/css/styles.css
@@ -14,7 +14,7 @@ body {
 /* Styles for custom classes in the document. (There are more, try to find them out!) */
 
 .resume-header {
-    background-color: #42ce7c;
+    background-color: #d1fce9;
 }
 
 .resume-main {
