removed language border

--- a/css/styles.css
+++ b/css/styles.css
@@ -24,10 +24,10 @@ body {
 }
 	
 .language-level {
-		border: #000000;
+		border: #ab2121 !important;
 }
 .resume-header {
-    background-color: #589d79c5;
+    background-color: #22533ac5;
 }
 
 .resume-main {
