change color language

--- a/css/styles.css
+++ b/css/styles.css
@@ -20,14 +20,14 @@ body {
 }
 	
 .language-level {
-		background-color: rgb(242, 224, 69);
+		background-color: rgb(255, 223, 94);
 }
 	
 .language-level {
-		border: #ab2121 !important;
+		border: #b42e2e !important;
 }
 .resume-header {
-    background-color: #22533ac5;
+    background-color: #2c533fc5;
 }
 
 .resume-main {
